# vncd

./: .pre-commit-config.yaml  README.md  meson.build  meson_options.txt
guix/: manifest.scm
rpm/: meson.build  server.sh  session.sh  vncd.service.in  vncd.spec.in  vncd.sysconfig.in
src/: meson.build
src/vncd/: main.cc  meson.build  port.hh  server.hh  task.hh  user.hh
src/vncd/test/: meson.build  vnc-stub.cc
